# zgy_project

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
.trae/documents/: prd.md  tech-architecture.md
agent-runtime/: .env.example  Dockerfile  pyproject.toml  requirements.txt
agent-runtime/app/: __init__.py  config.py  main.py
agent-runtime/app/agents/: __init__.py  base.py  coder.py  deployer.py  registry.py  reviewer.py  tester.py
agent-runtime/app/api/middleware/: __init__.py  cache.py  error_handler.py  request_logger.py
agent-runtime/app/api/routes/: __init__.py  agents.py  health.py  search.py  workflows.py
agent-runtime/app/graph/: __init__.py  edges.py  nodes.py  state.py  workflow.py
agent-runtime/app/memory/: __init__.py  base.py  long_term.py  short_term.py  summarizer.py
agent-runtime/app/models/: __init__.py  enums.py  schemas.py
agent-runtime/app/services/: __init__.py  event_service.py  llm_service.py  project_service.py  vector_service.py
agent-runtime/app/tools/: __init__.py  base.py  code_search.py  file_ops.py  git_ops.py  terminal.py  web_search.py
agent-runtime/app/utils/: __init__.py  code_parser.py  prompt_templates.py  token_counter.py
agent-runtime/tests/: conftest.py  generate_perf_report.py  test_agents.py  test_api_contracts.py  test_graph.py  test_integration.py  test_memory.py  test_performance.py  test_tools.py
api-gateway/: Dockerfile  pom.xml
api-gateway/src/main/java/com/deepagent/: DeepAgentApplication.java
api-gateway/src/main/resources/: application-dev.yml  application-prod.yml  application.yml
api-gateway/src/main/resources/db/migration/: V1__init_schema.sql
api-gateway/src/main/resources/proto/: agent_service.proto
frontend/: .env.local.example  .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/projects/: page.tsx
frontend/src/app/(dashboard)/projects/[id]/: page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/agents/: page.tsx
frontend/src/app/dashboard/projects/: page.tsx
frontend/src/app/dashboard/projects/[id]/: layout.tsx  page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/dashboard/workflows/: page.tsx
frontend/src/components/: error-boundary.tsx
frontend/src/components/agents/: agent-selector.tsx  agent-status.tsx  chat-panel.tsx  message-bubble.tsx  thinking-chain.tsx
frontend/src/components/code/: code-diff.tsx  code-editor.tsx  file-tree.tsx  terminal.tsx
frontend/src/components/dashboard/: activity-feed.tsx  agent-performance.tsx  stats-card.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx  user-menu.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  spinner.tsx  toast.tsx
frontend/src/components/workflow/: agent-node.tsx  edge-custom.tsx  workflow-editor.tsx  workflow-toolbar.tsx
frontend/src/lib/: api-client.ts  constants.ts  mock-data.ts  socket.ts  utils.ts
frontend/src/lib/__tests__/: api-contract.test.ts
frontend/src/lib/hooks/: use-agent.ts  use-auth.ts  use-websocket.ts  use-workflow.ts
frontend/src/stores/: agent-store.ts  auth-store.ts  editor-store.ts  project-store.ts  workflow-store.ts
frontend/src/types/: agent.ts  index.ts  project.ts  workflow.ts
scripts/: run_e2e_tests.ps1  run_e2e_tests.sh
vector-engine/: CMakeLists.txt  README.md
vector-engine/bindings/: CMakeLists.txt  pybind_module.cpp
vector-engine/cmake/: FindHnswlib.cmake
vector-engine/include/deepagent/: vector_engine.h
vector-engine/src/embedding/: code_embedder.cpp  code_embedder.h  tokenizer.cpp  tokenizer.h
vector-engine/src/hnsw/: hnsw_index.cpp  hnsw_index.h  index_config.h
vector-engine/src/storage/: metadata_manager.cpp  metadata_manager.h  vector_store.cpp  vector_store.h
vector-engine/src/utils/: distance.cpp  distance.h  logger.cpp  logger.h  thread_pool.cpp  thread_pool.h
vector-engine/tests/: CMakeLists.txt  test_distance.cpp  test_embedder.cpp  test_hnsw.cpp  test_performance.cpp
(+57 files in other folders)
